tests/substructural/composition/enum_copy_with_non_copy_payload.err.expected
error: at 2:30: [COMP-CopyMarkerNotSatisfied] In enum 'Bad' (marked Copy), variant 'A' payload type &mut i64 is not Copy
   |
 2 |             enum Bad: Copy { A: &mut i64 }
   |                              ^^^^^^^^^^^
